# gpx

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/gpx/: error.rs  geo.rs  info.rs  mod.rs  parse.rs
src/gpx/analysis/: mod.rs  options.rs  profile.rs  statistics.rs  waypoint_path.rs
src/gpx/convert/: mod.rs
src/gpx/extensions/: garmin.rs  mod.rs  waypoint.rs
src/gpx/operations/: mod.rs
src/gpx/parse/: components.rs  mod.rs  xml.rs
src/gpx/serialize/: mod.rs
src/gpx/types/: bounds.rs  copyright.rs  email.rs  extensions.rs  fix.rs  gpx.rs  link.rs  metadata.rs  mod.rs  person.rs  point.rs  point_segment.rs  route.rs  track.rs  waypoint.rs
src/gpx/validation/: mod.rs
tests/: cli.rs  extensions.rs  parse_gpx.rs  statistics.rs  waypoint_path.rs
tests/fixtures/: sample.gpx
