[package]
name = "gpx-rs"
version = "0.1.0"
edition = "2021"
description = "GPX manipulation library and CLI"
readme = "README.md"

[lib]
name = "gpx_rs"
path = "src/lib.rs"

[[bin]]
name = "gpx-rs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
